# Awesome

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  Awesome-NodeJS.md  OVERRIDES.md  Prospects.md  README.md  _prospects.html  about.html  awesome-IaC.md  awesome-IaS.md  awesome-apis  awesome-architectures  awesome-clis.md  awesome-communities.md  awesome-concepts.md  awesome-containers.md  awesome-dev.md  awesome-devkits.md  awesome-devops.md  awesome-docker.md  awesome-docs.md  awesome-frontend  awesome-frontend.md  awesome-go.md  awesome-iac.md  awesome-js  awesome-js.md  awesome-nodejs.md  awesome-ops.md  awesome-principles.md  awesome-python.md  awesome-react.md  awesome-security.md  awesome-system-components  awesome-systems.md  awesome-toolchains.md  (+10 more)
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  docs.yml  pages.yml
.github/workflows.disabled/: deploy.yml  mega-linter.yml
.gitlab/: example.gitlab-ci.yml
.space/: devfile.yaml
_old/: index.md  markdown.md  mkdocs-material.yml  mkdocs.yml  pyproject.toml
_old/assets/scss/: theme.scss
_old/docs/: index.md
_old/docs/.wiki/: Home.md  WebDev-must-read.md  _Sidebar.md
awesome/: NodeJS.md  awesome-frontend.md  awesome-js.md  awesome-react.md
awesome-lists/: ai.md  apis.md  awesome-clis.md  awesome-go.md  awesome-systems.md  chaos-engineering.md  cloud-architectures.md  communities.md  design-patterns.md  dev-environments.md  devops.md  docs.md  frontend.md  gitlab.md  go.md  iac.md  kubernetes.md  nodejs.md  powershell.md  principles.md  python.md  security.md  self-hosted.md  specifications.md  systems.md  terminals.md  ui-design.md
data/: README.md  awesome-communities.md  awesome-python.md  awesome-systems.md  awesome-workspace.md
data/prospects/: flows.md
docs/: _prospects.md  awesome-containers.md  awesome-devops.md  awesome-principles.md  awesome-python.md  awesome-workspace.md  index.md
docs/.wiki/: WebDev-must-read.md  _Sidebar.md
docs/lists/: ai.md  apis.md  clis.md  cloud-architectures.md  communities.md  containers.md  design-patterns.md  dev-environments.md  devops.md  docs.md  frontend.md  gitlab.md  go.md  iac.md  kubernetes.md  nodejs.md  powershell.md  principles.md  python.md  security.md  self-hosted.md  specifications.md  systems.md  terminals.md  ui-design.md
lists/: ai.html  ai.md  apis.html  apis.md  clis.html  clis.md  cloud-architectures.html  communities.html  communities.md  containers.html  containers.md  design-patterns.html  dev-environments.html  devops.html  docs.html  docs.md  frontend.html  frontend.md  go.html  iac.html  nodejs.html  principles.html  python.html  python.md  security.html  self-hosted.html  self-hosted.md  systems.html  systems.md
prospects/: _all.md  dotnet.md  flows.md  nodeJs.md
search/: search_index.json
site/: index.md  mkdocs.yml  other-lists.md  pyproject.toml
site/assets/css/: extra.css
site/docs/.wiki/: Home.md  WebDev-must-read.md  _Sidebar.md
site/tools/crawlers/github-crawler/: pyproject.toml
tools/: hooks.py
tools/crawlers/github-crawler/: pyproject.toml
