[tool.poetry]
name = "awesome"
version = "0.1.0"
description = ""
authors = ["Jean-Michel Girard <Jean.M.Girard@Outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"
mkdocs = "^1.4.2"
wikilinks = "^0.0.4"
smarty = "^0.3.3"
pymdown-extensions = "^9.9"

# ...and can be installed only when explicitly requested
pre-commit = "^3.7.0"
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
my-script = "my_package:main"
serve = "mkdocs serve"