[tool.poetry]
name = "awesome-lists"
version = "0.1.0"
description = ""
authors = ["Jean-Michel Girard <Jean.M.Girard@Outlook.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.7.3"
zensical = "^0.0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pre-commit = "^3.7.0"
mdformat = "^1.0.0"
mdformat-gfm = "^1.0.0"
mdformat-pyproject = "^0.1.1"
mdformat-mkdocs = "^5.1.4"
watchdog = "^6.0.0"
mdformat-frontmatter = "^2.0.10"
tomcli = "^0.10.1"
tomli = "^2.4.0"
tomli-w = "^1.2.0"

[tool.mdformat]
wrap = "keep"         # options: {"keep", "no", INTEGER}
# number = false        # options: {false, true}
# end_of_line = "lf"    # options: {"lf", "crlf", "keep"}
# validate = true       # options: {false, true}
extensions = [
  "gfm",
  "frontmatter",
  "mkdocs",
  "pyproject"
] # options: a list of enabled extensions (default: all installed are enabled)
# codeformatters = [  # options: a list of enabled code formatter languages (default: all installed are enabled)
#     "python",
#     "json",
# ]
exclude = [ # Python 3.13+ only:
  # exclude all files that are not suffixed .md
  "**/?", "**/??", "**/???", "**/*[!.]??", "**/*[!m]?", "**/*[!d]",
  "CHANGELOG.md",
  "venv/**",
  ".venv/**",
  "public/**"
]
