[tool.poetry]
name = "awesome"
version = "0.1.0"
description = ""
authors = ["Jean-Michel Girard <Jean.M.Girard@Outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"